--- a/app/src/main/res/layout/setting_view.xml
+++ b/app/src/main/res/layout/setting_view.xml
@@ -35,12 +35,13 @@
                 android:text=""/>
 
             <Switch
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/_sound"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textColor="@android:color/background_light"
-                android:layout_weight="0.50" />
+                android:layout_weight="0"
+                android:checked="false" />
 
             <TextView
                 android:layout_width="0dp"
@@ -63,15 +64,64 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text=""/>
-
-            <Switch
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="@string/_background"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textColor="@android:color/background_light"
-                android:layout_weight="0.15" />
+                android:text="Background:"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center_horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""/>
+           <RadioGroup
+               android:orientation="horizontal"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content">
+
+               <RadioButton
+                   android:id="@+id/green_Background"
+                   android:layout_width="90dp"
+                   android:layout_height="wrap_content"
+                   android:textColor="@android:color/background_light"
+                   android:textSize="20sp"
+                   android:checked="true"
+                   android:buttonTint="@color/orange"
+                   android:text="@string/greenBackground"/>
+
+               <TextView
+                   android:layout_width="20dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:text=""/>
+
+               <RadioButton
+                   android:id="@+id/red_Background"
+                   android:layout_width="90dp"
+                   android:layout_height="wrap_content"
+                   android:textColor="@android:color/background_light"
+                   android:textSize="20sp"
+                   android:checked="false"
+                   android:text="@string/redBackground"/>
+
+           </RadioGroup>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -95,13 +145,13 @@
                 android:text=""/>
 
             <Button
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:background="#0d8c33"
                 android:textSize="20sp"
                 android:textColor="@android:color/background_light"
-                android:text="Close"
+                android:text="@string/_btnClose"
                 android:id="@+id/btn_close"
                 android:layout_marginRight="10dp"
                 android:layout_gravity="right" />
